EXTRA_DIST = php_smth_bbs.h
libdir=@PHPBBSLIBPATH@
lib_LTLIBRARIES = libphpbbslib.la
phpdir=@PHPBBSLIBPATH@
#php_DATA=funcs.php
libphpbbslib_la_SOURCES = phpbbslib.c phpbbs.user.c phpbbs.announce.c phpbbs.vote.c phpbbs.system.c phpbbs.board.c phpbbs.msg.c
libphpbbslib_la_LIBADD = -L../../libBBS -lBBS -L../../libsystem -lsystem -L../lib -lbbslib
AM_CFLAGS  = -DNJU_WWWBBS -DBBS2WWW -I../include -I../../src -I@PHPBASE@ -I@PHPBASE@/main -I@PHPBASE@/Zend -I@PHPBASE@/TSRM -DSMTH -DCOMPILE_DL_SMTH_BBS -Wall
CLEANFILES=@EXTRA_CLEAN@
