lib_LTLIBRARIES = libpip.la
noinst_HEADERS = pip.h
libpip_la_SOURCES = pip_file.c      pip_menu.c      pip_practice.c \
pip_basic.c     pip_for_fb.c    pip_other.c     pip_special.c \
pip_ending.c    pip_job.c       pip_pic.c       pip_store.c   \
pip_fight.c     pip_main.c      pip_play.c      pip_system.c
libdir=${prefix}/game/so
AM_CFLAGS = -DBBSMAIN -I$(top_srcdir)/src
CLEANFILES=@EXTRA_CLEAN@
